@@ -4,6 +4,7 @@
 	* Changed the link viewhelper to handle the target argument in different ways
 	* Added "alpha" and "lex" as aliases for "index" to the facet sorting option
 	* Added support for conditions in templates
+	* Changed tx_solr_Template to tolerate if viewhelpers could not be loaded
 
 2010-09-14  Markus Goldbach  <markus.goldbach@dkd.de>
 
